kubernetes/infrastructure/persistence/longhorn/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
  annotations:
    gethomepage.dev/description: Storage Controller
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Persistence
    gethomepage.dev/icon: longhorn.png
    gethomepage.dev/name: Longhorn
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=longhorn"
  labels:
    app.kubernetes.io/name: longhorn
spec:
  hostnames:
    - longhorn.costanza.cloud
  parentRefs:
    - kind: Gateway
      name: private
      namespace: envoy-gateway-system
  rules:
    - backendRefs:
        - kind: Service
          name: longhorn-frontend
          namespace: longhorn-system
          port: 80
